--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -74,6 +74,7 @@ packages:
   pins: !include common/binary.yaml
   aquapi: !include common/aquapi.yaml
   # ezo_command: !include common/ezo_command.yaml
+  # debug: !include common/debug.yaml
   ezo_ph: !include common/ezo_ph.yaml
   ezo_ec: !include common/ezo_ec.yaml
   ezo_hum: !include common/ezo_hum.yaml
