--- a/common/temperature_dallas.yaml
+++ b/common/temperature_dallas.yaml
@@ -1,3 +1,10 @@
+esphome:
+  on_boot: 
+      priority: 200
+      then:
+        - component.update: temp_range
+        - component.update: temp_range_2
+
 # 18B20 sensor Pin
 dallas:
   - pin: ${dallasPin}
@@ -122,13 +129,13 @@ text_sensor:
     update_interval: "${update_temp}"
     disabled_by_default: true
     lambda: |-
-      if(id(temp_f_2).state <= id(range_cool).state) {
+      if(id(temp_f_2).state <= id(range_cool_2).state) {
         return {"Cool"};
       }
-      if(id(temp_f_2).state < id(range_warm).state && id(temp_f_2).state > id(range_cool).state) {
+      if(id(temp_f_2).state < id(range_warm_2).state && id(temp_f_2).state > id(range_cool_2).state) {
         return {"OK"};
       }
-      if(id(temp_f_2).state >= id(range_warm).state) {
+      if(id(temp_f_2).state >= id(range_warm_2).state) {
         return {"Warm"};
       }     
       else {
@@ -136,7 +143,7 @@ text_sensor:
       }
 
 number:
-  # Temperature when Cool
+  # Temperature 1 when Cool
   - platform: template
     name: "Temp. Cool"
     id: range_cool
@@ -152,9 +159,8 @@ number:
     on_value: 
       then:
         - component.update: temp_range
-        - component.update: temp_range_2
 
-  # Temperature when Warm
+  # Temperature 1 when Warm
   - platform: template
     name: "Temp. Warm"
     icon: mdi:water-alert
@@ -170,4 +176,39 @@ number:
     on_value: 
       then:
         - component.update: temp_range
+
+  # Temperature 2 when Cool
+  - platform: template
+    name: "Temp. Cool"
+    id: range_cool_2
+    icon: mdi:water-thermometer
+    optimistic: true
+    disabled_by_default: true
+    mode: box
+    min_value: 0.0
+    max_value: 100.0
+    step: 0.5
+    restore_value: True
+    initial_value: 72
+    entity_category: "Config"
+    on_value: 
+      then:
+        - component.update: temp_range_2
+
+  # Temperature 2 when Warm
+  - platform: template
+    name: "Temp. Warm"
+    icon: mdi:water-alert
+    id: range_warm_2
+    optimistic: true
+    disabled_by_default: true
+    mode: box
+    min_value: 0.0
+    max_value: 100.0
+    step: 0.5
+    restore_value: True
+    initial_value: 82
+    entity_category: "Config"
+    on_value: 
+      then:
         - component.update: temp_range_2
