--- a/common/temperature_dallas.yaml
+++ b/common/temperature_dallas.yaml
@@ -1,10 +1,3 @@
-esphome:
-  on_boot: 
-      priority: 200
-      then:
-        - component.update: temp_range
-        - component.update: temp_range_2
-
 # 18B20 sensor Pin
 dallas:
   - pin: ${dallasPin}
@@ -179,7 +172,7 @@ number:
 
   # Temperature 2 when Cool
   - platform: template
-    name: "Temp. Cool"
+    name: "Temp. 2 Cool"
     id: range_cool_2
     icon: mdi:water-thermometer
     optimistic: true
@@ -197,7 +190,7 @@ number:
 
   # Temperature 2 when Warm
   - platform: template
-    name: "Temp. Warm"
+    name: "Temp. 2 Warm"
     icon: mdi:water-alert
     id: range_warm_2
     optimistic: true
