--- a/common/ezo_ph.yaml
+++ b/common/ezo_ph.yaml
@@ -1,3 +1,8 @@
+substitutions:
+  # pH circuit, who's address is 99
+  addPH: "99"
+  update_ph: "60s"
+
 esphome:
     on_boot: 
         priority: 200
