--- a/common/ezo_rtd.yaml
+++ b/common/ezo_rtd.yaml
@@ -1,3 +1,8 @@
+substitutions:
+  # RTD circuit, who's address is 102
+  addRTD: "102"
+  update_rtd: "60s"
+
 # esphome:
 #     on_boot: 
 #         priority: 200
