--- a/common/ezo_co2.yaml
+++ b/common/ezo_co2.yaml
@@ -77,7 +77,7 @@ sensor:
         return std::stof(v[1]);
       } 
       else {
-        return NULL;
+        return NAN;
       }
 
 text_sensor:
