--- a/common/ezo_ec.yaml
+++ b/common/ezo_ec.yaml
@@ -101,7 +101,7 @@ sensor:
         return std::stof(v[1]);
       } 
       else {
-        return NULL;
+        return NAN;
       }
 
   # Salinity
@@ -127,7 +127,7 @@ sensor:
         return std::stof(v[2]);
       } 
       else {
-        return NULL;
+        return NAN;
       }
 
   # Specific Gravity
@@ -153,7 +153,7 @@ sensor:
         return std::stof(v[3]);
       } 
       else {
-        return NULL;
+        return NAN;
       }
 
 text_sensor:
