--- a/common/ezo_hum.yaml
+++ b/common/ezo_hum.yaml
@@ -74,7 +74,7 @@ sensor:
         return std::stof(v[1]);
       } 
       else {
-        return NULL;
+        return NAN;
       }
 
   # Dew Point
@@ -100,7 +100,7 @@ sensor:
         return std::stof(v[2]);
       } 
       else {
-        return NULL;
+        return NAN;
       }
 
 text_sensor:
