--- a/common/ezo_ec.yaml
+++ b/common/ezo_ec.yaml
@@ -264,6 +264,9 @@ button:
             if (id(select_command_ec).state == "Calibrate CLEAR (WILL RESET CALIBRATION)") {
               id(ec_ezo).clear_calibration();
             }
+            else {
+              id(ec_ezo).send_custom("R");
+            }
 
 select:
   - platform: template
