--- a/common/device_base.yaml
+++ b/common/device_base.yaml
@@ -1,8 +1,6 @@
 substitutions:
   # Import Config
   import_config: "false"
-  # Add MAC address to name
-  suffix: "true"
   # Logger Level - Can use VERBOSE for more information in Logs
   logger: "DEBUG"
 
@@ -14,7 +12,7 @@ esphome:
   name: "${name}"
   friendly_name: "${friendly_name}"
   # Automatically add the mac address to the name
-  name_add_mac_suffix: ${suffix}
+  name_add_mac_suffix: true
   comment: "AquaPi ESP32 - Aquarium Controller & Monitor"
   project:
     name: TheRealFalseReality.aquapi
