--- a/common/ezo_ph.yaml
+++ b/common/ezo_ph.yaml
@@ -61,7 +61,15 @@ button:
     on_press:
       then:
         - lambda: |-
+            byte error;
             id(ph_ezo).send_custom("R");
+            error = Wire.endTransmission();
+            if (error == 0) {
+              id(ph_ezo).send_custom("R");
+            }
+            else {
+              ESP_LOGW("custom_ph_read", "No pH sensor detected at address: ${addPH}!!");
+            }
 
   # Send Selected EZO Command - pH
   - platform: template
@@ -99,9 +107,6 @@ button:
             }
             if (id(select_command_ph).state == "Calibrate CLEAR (WILL RESET CALIBRATION)") {
               id(ph_ezo).clear_calibration();
-            }
-            else {
-              id(ph_ezo).send_custom("R");
             }
 
 select:
