--- a/common/ezo_ec.yaml
+++ b/common/ezo_ec.yaml
@@ -260,6 +260,12 @@ button:
               id(ec_ezo).send_custom("O,S,0");
               id(ec_ezo).send_custom("O,SG,0");
             }
+            if (id(select_command_ec).state == "Get TDS Value") {
+              id(ec_ezo).send_custom("TDS,?");
+            }
+            if (id(select_command_ec).state == "Set TDS Value to NaCl - 0.48") {
+              id(ec_ezo).send_custom("TDS,0.48");
+            }
             if (id(select_command_ec).state == "Check Calibration") {
               id(ec_ezo).get_calibration();
             }  
@@ -299,6 +305,8 @@ select:
       - "Output Units - Salinity"
       - "Output Units - Specific Gravity"
       - "Output Units - TDS"
+      - "Get TDS Value"
+      - "Set TDS Value to NaCl - 0.48"
       - "Check Calibration"
       - "Calibrate @ 0 (WILL RESET CALIBRATION)"
       - "Calibrate @ LOW = 12880 (WILL RESET CALIBRATION)"
