--- a/common/binary.yaml
+++ b/common/binary.yaml
@@ -1,8 +1,8 @@
 substitutions:  
-  opticalLowPin: "32"
-  opticalHighPin: "33"
-  auxPin1: "26"
-  auxPin2: "27"
+  opticalLowPin: "32" # yellow
+  opticalHighPin: "33" # blue
+  auxPin1: "26" # yellow
+  auxPin2: "27" # blue
   # Water Level
   update_water: "60s"
 
