--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -3,7 +3,7 @@ substitutions:
   name: "aquapi"
   friendly_name: "AquaPi"
   # App Version - Updated: 11/2023
-  app_version: "1.3.5"
+  app_version: "1.3.6"
 
 packages:
   device_base: !include common/device_base.yaml
@@ -15,6 +15,6 @@ packages:
   ezo_ec: !include common/ezo_ec.yaml
   # ezo_hum: !include common/ezo_hum.yaml
   # ezo_rtd: !include common/ezo_rtd.yaml
-  # ezo_co2: !include common/ezo_co2.yaml
+  ezo_co2: !include common/ezo_co2.yaml
   # ezo_do: !include common/ezo_do.yaml
   # ezo_pmp: !include common/ezo_pmp.yaml
