Temp Binary Sensors
temp range binary sensors added

--- a/common/temperature_dallas.yaml
+++ b/common/temperature_dallas.yaml
@@ -110,6 +110,34 @@ sensor:
     lambda: |-
       return {${cal_100_2}};
 
+binary_sensor:
+  - platform: template
+    name: Ideal Temp
+    id: ideal_temp
+    icon: mdi:thermometer-check
+    filters:
+      - lambda: |-
+          if (id(temp_range).state == "OK") {
+            return true;
+          }
+          else {
+            return false
+          }
+
+  - platform: template
+    name: Ideal Temp 2
+    id: ideal_temp_2
+    icon: mdi:thermometer-check
+    disabled_by_default: true
+    filters:
+      - lambda: |-
+          if (id(temp_range_2).state == "OK") {
+            return true;
+          }
+          else {
+            return false
+          }
+
 text_sensor:
   # Temperature Range 1
   - platform: template
