--- a/common/ezo_co2.yaml
+++ b/common/ezo_co2.yaml
@@ -113,7 +113,7 @@ button:
               id(co2_ezo).send_custom("R");
             }
             else {
-              ESP_LOGW("custom_co2_read", "No Carbon Dioxide sensor detected at address: ${addCO2}!!");
+              ESP_LOGW("custom_co2_read", "No Carbon Dioxide sensor detected at address: ${addCO2}!");
             }
 
   # Send Selected EZO Command - CO2
