--- a/common/temperature_dallas.yaml
+++ b/common/temperature_dallas.yaml
@@ -184,7 +184,7 @@ number:
   - platform: template
     name: "Temp. Cool"
     id: range_cool
-    icon: mdi:water-thermometer
+    icon: mdi:snowflake-thermometer
     optimistic: true
     mode: box
     min_value: 0.0
@@ -200,7 +200,7 @@ number:
   # Temperature 1 when Warm
   - platform: template
     name: "Temp. Warm"
-    icon: mdi:water-alert
+    icon: mdi:sun-thermometer
     id: range_warm
     optimistic: true
     mode: box
@@ -218,7 +218,7 @@ number:
   - platform: template
     name: "Temp. 2 Cool"
     id: range_cool_2
-    icon: mdi:water-thermometer
+    icon: mdi:snowflake-thermometer
     optimistic: true
     disabled_by_default: true
     mode: box
@@ -235,7 +235,7 @@ number:
   # Temperature 2 when Warm
   - platform: template
     name: "Temp. 2 Warm"
-    icon: mdi:water-alert
+    icon: mdi:sun-thermometer
     id: range_warm_2
     optimistic: true
     disabled_by_default: true
