--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -17,5 +17,5 @@ packages:
   # ezo_rtd: !include common/ezo_rtd.yaml
   ezo_co2: !include common/ezo_co2.yaml
   # ezo_do: !include common/ezo_do.yaml
-  # ezo_pmp: !include common/ezo_pmp.yaml
-  ezo_commands: !include common/ezo_commands.yaml
+  ezo_pmp: !include common/ezo_pmp.yaml
+  # ezo_commands: !include common/ezo_commands.yaml
