--- a/common/ezo_pmp.yaml
+++ b/common/ezo_pmp.yaml
@@ -1,7 +1,47 @@
 substitutions:
   # PMP circuit, who's address is 103
-  addPMP: "103"
+  addPMP: "103" # White
   update_pmp: "60s"
+  
+api:
+  services: 
+    - service: pump_dose_volume
+      variables: 
+        dose_volume: float
+      then: 
+        - ezo_pmp.dose_volume:
+            id: ezo_pump
+            volume: !lambda 'return dose_volume;'
+    - service: pump_dose_volume_time
+      variables:
+        dose_volume: float
+        dose_time: float
+      then:
+        - ezo_pmp.dose_volume_over_time:
+            id: ezo_pump
+            volume: !lambda |-
+              return dose_volume;
+            duration: !lambda |-
+              return dose_time;
+    - service: pump_dose_flow_rate_time
+      variables:
+        dose_rate: float
+        dose_time: float
+      then:
+        - ezo_pmp.dose_with_constant_flow_rate:
+            id: ezo_pump
+            volume_per_minute: !lambda |-
+              return dose_rate;
+            duration: !lambda |-
+              return dose_time;
+    - service: pump_set_calibration
+      variables:
+        actual_volume: float
+      then:
+        - ezo_pmp.set_calibration_volume:
+            id: ezo_pump
+            volume: !lambda |-
+              return actual_volume;
 
 ezo_pmp:
   id: ezo_pump
@@ -13,7 +53,7 @@ sensor:
     current_volume_dosed:
       id: current_volume_dosed
       name: Pump - Current Volume Dosed
-      icon: mdi:pump
+      icon: mdi:cube-scan
   - platform: ezo_pmp
     total_volume_dosed:
       id: total_volume_dosed
@@ -32,7 +72,7 @@ sensor:
   - platform: ezo_pmp
     max_flow_rate:
       id: max_flow_rate
-      name: Pump - Max Flow Rate
+      name: Pump - Max Volume/Time Flow Rate
       icon: mdi:car-speed-limiter
   - platform: ezo_pmp
     pump_voltage:
@@ -61,37 +101,117 @@ text_sensor:
     calibration_status:
       id: calibration_status
       name: Pump - Calibration Status
-      disabled_by_default: true
+      # disabled_by_default: true
       icon: mdi:tape-measure
 
 number:
   - platform: template
     id: volume
     icon: mdi:pump
-    name: "Pump - Volume to Dose"
+    name: Pump - Volume to Dose (mL)
     optimistic: true
-    min_value: 0
-    max_value: 100
+    initial_value: 10 # cannot be less than +/-0.1mL
+    min_value: -378541
+    max_value: 378541 # 100 gal
     mode: box
-    step: 0.01
+    step: 0.1
   - platform: template
     id: duration
-    icon: mdi:pump
-    name: "Pump - Duration to Dose (minutes)"
+    icon: mdi:timer
+    name: Pump - Time to Dose (minutes)
     optimistic: true
-    min_value: 0
-    max_value: 100
+    initial_value: 1
+    min_value: 1
+    max_value: 1440 # 24 hours
     mode: box
-    step: 0.5
+    step: 0.1
+  - platform: template
+    id: flow_rate
+    icon: mdi:pump
+    name: Pump - Volume/Time Flow Rate (mL/min)
+    optimistic: true
+    initial_value: 10
+    min_value: .5
+    max_value: 105 # may need to lower to 40
+    mode: box
+    step: 0.1
 
 button:
+  # TODO Make UI
   - platform: template
-    name: "Pump - Dose Over Time"
+    name: Pump - Dose Volume for Time
     icon: mdi:clock-time-two-outline
+    id: dose_over_time
     on_press:
       - ezo_pmp.dose_volume_over_time:
           id: ezo_pump
           volume: !lambda |-
-                  return id(volume).state;
+            return id(volume).state;
           duration: !lambda |-
-                  return id(duration).state;
+            return id(duration).state;
+  - platform: template
+    name: Pump - Dose Continuously
+    icon: mdi:infinity
+    id: dose_continuously
+    on_press:
+      - ezo_pmp.dose_continuously:
+          id: ezo_pump
+  - platform: template
+    name: Pump - Dose Volume
+    icon: mdi:pump
+    id: dose_volume
+    on_press:
+      - ezo_pmp.dose_volume:
+          id: ezo_pump
+          volume: !lambda |-
+            return id(volume).state;
+  - platform: template
+    name: Pump - Dose at Volume/Time Flow Rate for Time
+    icon: mdi:format-text-wrapping-overflow
+    id: dose_flow_rate
+    on_press:
+      - ezo_pmp.dose_with_constant_flow_rate:
+          id: ezo_pump
+          volume_per_minute: !lambda |-
+            return id(flow_rate).state;
+          duration: !lambda |-
+            return id(duration).state;
+  - platform: template
+    name: Pump - Pause Dosing
+    icon: mdi:pause
+    id: dose_pause
+    on_press:
+      - ezo_pmp.pause_dosing:
+          id: ezo_pump
+  - platform: template
+    name: Pump - Stop Dosing
+    icon: mdi:stop
+    id: dose_stop
+    on_press:
+      - ezo_pmp.stop_dosing:
+          id: ezo_pump
+  - platform: template
+    name: Pump - Clear Total Volume Dosed
+    icon: mdi:backspace
+    id: dose_clear
+    on_press:
+      - ezo_pmp.clear_total_volume_dosed:
+          id: ezo_pump
+
+  # Calibrate
+  - platform: template
+    name: Pump - Set Calibration Volume
+    icon: mdi:tape-measure
+    id: dose_calibrate_volume
+    on_press:
+      - ezo_pmp.set_calibration_volume:
+          id: ezo_pump
+          volume: !lambda |-
+            return id(volume).state;
+  - platform: template
+    name: Pump - Clear Calibration Volume
+    icon: mdi:cancel
+    id: dose_calibrate_volume_clear
+    on_press:
+      - ezo_pmp.clear_calibration:
+          id: ezo_pump
